# mt5-pnl-exporter

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: security-audit.md
docs/superpowers/plans/: 2026-05-31-phase-1a-port-exporter.md  2026-06-01-phase-1b-cycle-1.md  2026-06-01-phase-1b-cycle-2.md  2026-06-01-phase-1b-cycle-3.md  2026-06-03-phase-1b-cycle-4.md  2026-06-04-phase-1b-cycle-5.md  2026-06-05-phase-1b-cycle-6.md  2026-06-06-node20-deprecation.md  2026-06-06-renovate-dependency-automation.md  2026-06-07-cli-naming-cleanup.md  2026-06-08-host-setup-onboarding-docs.md  2026-06-10-snapshot-verification-docs.md  2026-06-11-export-prior-read-resilience.md  2026-06-12-config-path-and-error-ux.md  2026-06-12-pypi-publish.md
docs/superpowers/specs/: 2026-05-31-repo-split-design.md  2026-06-01-phase-1b-cycle-1-design.md  2026-06-01-phase-1b-cycle-2-design.md  2026-06-01-phase-1b-cycle-3-design.md  2026-06-01-phase-1b-design.md  2026-06-02-phase-1b-cycle-4-design.md  2026-06-03-phase-1b-cycle-5-design.md  2026-06-05-phase-1b-cycle-6-design.md  2026-06-06-node20-deprecation-design.md  2026-06-06-renovate-dependency-automation-design.md  2026-06-07-cli-naming-cleanup-design.md  2026-06-08-host-setup-onboarding-docs-design.md  2026-06-10-snapshot-verification-docs-design.md  2026-06-11-export-prior-read-resilience-design.md  2026-06-12-config-path-and-error-ux-design.md  2026-06-12-pypi-publish-design.md
schema/: snapshot.schema.json
src/mt5_pnl_exporter/: __init__.py  aggregate.py  cli.py  config.py  secrets.py  snapshot.py
src/mt5_pnl_exporter/sources/: base.py  fixture.py  mt5.py
tests/: test_aggregate.py  test_cli.py  test_config.py  test_mt5_source.py  test_schema_file.py  test_secrets.py  test_snapshot.py
tests/fixtures/: sample_deals.json  sample_snapshot.json
