[project]
name = "mt5-pnl-exporter"
version = "1.0.3"
description = "Exports MT5 deal history on the Windows host where MT5 runs and writes a typed, encrypted snapshot."
readme = "README.md"
authors = [
    { name = "Tane Morgan", email = "464864+tanem@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["metatrader", "mt5", "trading", "forex", "pnl", "snapshot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "keyring>=25",
    "pyrage>=1.2",
]

[project.optional-dependencies]
mt5 = [
    "MetaTrader5>=5.0",
]

[project.scripts]
mt5-pnl-exporter = "mt5_pnl_exporter.cli:app"

[project.urls]
Homepage = "https://github.com/tanem/mt5-pnl-exporter"
Repository = "https://github.com/tanem/mt5-pnl-exporter"
Issues = "https://github.com/tanem/mt5-pnl-exporter/issues"
Changelog = "https://github.com/tanem/mt5-pnl-exporter/releases"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6",
    "pre-commit>=4",
    "twine>=6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mt5_pnl_exporter --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/mt5_pnl_exporter"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.$",   # Protocol method stubs ending in `...`
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/mt5_pnl_exporter"]

[[tool.mypy.overrides]]
module = "MetaTrader5"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyrage"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mt5_pnl_exporter.cli"
disallow_untyped_decorators = false
